# chatbot-api

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  log.conf  log.dev.conf  prometheus.yml  pyproject.toml
chatbot/: __init__.py  env.py  main.py
chatbot/callback/: ws.py
chatbot/llm/: openai.py
chatbot/middleware/: accesslogger.py
chatbot/router/: streaming.py
tests/: test_asyncio.py  test_env.py  test_pt.py
