
[project]
name = "chatbot-demo"
version = "0.0.1"
description = "a chatbot demo api"
authors = [
    {name = "TATA", email = "evadcmd@gmail.com"},
]
dependencies = [
    "langchain[llms]>=0.0.240",
    "fastapi[all]>=0.99.1",
    "concurrent-log-handler>=0.9.24",
]
requires-python = ">=3.11"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
lint = [
    "black>=23.7.0",
    "isort>=5.12.0",
]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
]

[tool.pdm.scripts]
dev.cmd="uvicorn chatbot.main:api --reload"
test.cmd="pytest --cov=./chatbot"