
[project]
name = "chatbot-demo"
version = "0.0.1"
description = "a chatbot demo api"
authors = [
    {name = "TATA", email = "evadcmd@gmail.com"},
]
dependencies = [
    "fastapi[all]>=0.99.1",
    "concurrent-log-handler>=0.9.24",
    "motor>=3.2.0",
    "redis>=4.6.0",
    "langchain>=0.0.240",
    "openai>=0.27.8",
    "prometheus-fastapi-instrumentator>=6.1.0",
]
requires-python = ">=3.11"
license = {text = "MIT"}

[tool.setuptools]
py-modules = ["chatbot"]

[tool.pdm.dev-dependencies]
lint = [
    "black>=23.7.0",
    "isort>=5.12.0",
]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
]

[tool.pdm.scripts]
dev.cmd = "uvicorn chatbot.main:api --reload"
dev.env = {env = "dev"}
test.cmd = "pytest --cov=./chatbot"
